prueba-brau-third-commit-tooltip

--- a/index.html
+++ b/index.html
@@ -93,27 +93,27 @@
       <h1 class="display-4 font-weight-bold my-2 p-3">Mis Trabajos</h1>
       <div class="card-deck">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="assets/img/meet_coffee.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Meet&Coffee</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <a href="#" class="btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Haz click para conocer más detalles">Ver más</a>
           </div>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="assets/img/iguana_page.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Iguana Page</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <a href="#" class="btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Haz click para conocer más detalles">Ver más</a>
           </div>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="assets/img/suricata.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Suricata</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <a href="#" class="btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Haz click para conocer más detalles">Ver más</a>
           </div>
         </div>
       </div>
