--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link text-white" href="#">Sobre Mi<span class="sr-only">(current)</span></a>
+              <a class="nav-link text-white" href="#sobre-mi">Sobre Mi<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Experiencia</a>
+              <a class="nav-link text-white" href="#mi-experiencia">Experiencia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Trabajos</a>
+              <a class="nav-link text-white" href="#ultimos-trabajos">Trabajos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Contacto</a>
+              <a class="nav-link text-white" href="#contacto">Contacto</a>
             </li>
           </ul>
         </div>
@@ -53,10 +53,10 @@
       </div>
     </header>
 
-    <section id="sobre-mi">
-      <div class="container my-3 py-3">
+    <section id="sobre-mi" class="my-5 py-5">
+      <div class="container">
         <h4 class=" text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4>
-        <div class="row my-3 py-3">
+        <div class="row">
           <div class="col-6">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
@@ -68,8 +68,8 @@
       </div>
     </section>
 
-    <section id="mi-experiencia" class="container text-center">
-      <h1 class="display-4 font-weight-bold my-2 p-3">Mi Experiencia</h1>
+    <section id="mi-experiencia" class="container text-center py-5 my-5">
+      <h1 class="display-4 font-weight-bold">Mi Experiencia</h1>
       <div class="row my-3">
         <div class="col-4">
           <i class="fas fa-chess-knight fa-3x my-3"></i>
@@ -119,7 +119,7 @@
       </div>
     </section>
 
-    <section id="Contacto" class="container text-center my-4">
+    <section id="contacto" class="container text-center my-4">
       <h1 class="display-4 font-weight-bold my-2 p-3">Contacto</h1>
       <div class="typeform-widget" data-url="https://braulioardiles.typeform.com/to/J1lvo7" style="width: 100%; height: 350px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=J1lvo7&utm_source=typeform.com-01DXVPFDB4S7FMADC2TDXF2S9E-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
     </section>
@@ -146,7 +146,9 @@
     </footer>
 
     <!--JQuery 3.4.1 Slim-->
-      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"></script>
     <!--JS Popper 1.16.0 -->
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <!--JS Bootstrap 4.4.1-->
