pruebas-six-commit-popover

--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
       <h1 class="display-4 font-weight-bold">Mi Experiencia</h1>
       <div class="row my-3">
         <div class="col-4">
-          <i class="fas fa-chess-knight fa-3x my-3"></i>
+          <i class="fas fa-chess-knight fa-3x my-3" data-toggle="popover" data-placement="right" data-content="Ingeniero Comercial" data-trigger="hover"></i>
           <h3>Estrategia Comercial</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
         </div>
         <div class="col-4">
-          <i class="fas fa-graduation-cap fa-3x my-3"></i>
+          <i class="fas fa-graduation-cap fa-3x my-3" data-toggle="popover" data-placement="right" data-content="5 años de experiencia" data-trigger="hover"></i>
           <h3>Sector Educación</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
         </div>
         <div class="col-4">
-          <i class="fas fa-code fa-3x my-3"></i>
+          <i class="fas fa-code fa-3x my-3" data-toggle="popover" data-placement="right" data-content="Empezando en Desafio Latam" data-trigger="hover"></i>
           <h3>Inicio a la Programación</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
         </div>
